<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="10dp"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/logout"
        android:layout_gravity="center_horizontal"
        app:tint="@android:color/black"
        android:contentDescription="@string/logout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_msg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/noBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>