<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sendLayout"
        android:layout_below="@id/toolbar"
        android:padding="15dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/sendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="10dp">

        <EditText
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_weight="1"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/enter_your_message" />

        <ImageView
            android:id="@+id/sendBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/send"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            app:tint="@color/colorPrimaryDark"
            android:contentDescription="@string/send" />

    </LinearLayout>

</RelativeLayout>